ansible/remote_root/etc/iptables
# Generated by iptables-save v1.4.21 on Thu Oct 22 22:49:13 2015
*nat
:PREROUTING ACCEPT [24:1049]
:INPUT ACCEPT [24:1049]
:OUTPUT ACCEPT [8:608]
:POSTROUTING ACCEPT [8:608]
COMMIT
# Completed on Thu Oct 22 22:49:13 2015
# Generated by iptables-save v1.4.21 on Thu Oct 22 22:49:13 2015
*filter
:INPUT ACCEPT [503:38175]
:FORWARD ACCEPT [50174:51054328]
:OUTPUT ACCEPT [369:54465]
-A INPUT -i lo -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 995 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 7000 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 8000 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 8080 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 8489 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 8888 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 3724 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 3306 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 25 -j ACCEPT 
-A INPUT -p gre -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 1723 -j ACCEPT 
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
COMMIT
# Completed on Thu Oct 22 22:49:13 2015
